Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art vandelay'"
+    "\"art vandelay\" # 'Art vandelay'\n",
+    "name.title"
    ]
   },
   {
