Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
     }
    ],
    "source": [
-    "name \"Ceo\" # 'CEO'\n",
+    "name = \"Ceo\" # 'CEO'\n",
+    "name.\n",
     "\n",
     "\n"
    ]
