Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "name = \"Ceo\" # 'CEO'\n",
+    "p = \"Ceo\" # 'CEO'\n",
     "name.upper()\n",
     "\n",
     "\n"
