--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -188,14 +188,14 @@
        "'CEO'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p = \"Ceo\" # 'CEO'\n",
-    "name.upper()\n",
+    "position = \"Ceo\" # 'CEO'\n",
+    "position.upper()\n",
     "\n",
     "\n"
    ]
