--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "addres = \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
