Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    },
    "outputs": [],
    "source": [
-    "addres = \"art.vandelay@vandelay.co\" # False"
+    "address = \"art.vandelay@vandelay.co\" # False\n",
+    "bool(address)"
    ]
   },
   {
