Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "addres \"art.vandelay@vandelay.co\" # False\n"
+    "\"art.vandelay@vandelay.co\" # False\n"
    ]
   },
   {
