--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,14 +218,14 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "bool\n"
+    "bool(address)\n"
    ]
   },
   {
