Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
+    "\"art.vandelay@vandelay.co\".endswi # False\n",
     "\n"
    ]
   },
